2018-09-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c: Polished.

2018-09-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Implement text carpeting mode.

	* src/ftstring.c (main): Add text-carpeting mode implemented in...
	(Render_Text): ... this new function.
	(Render_CmpKern, Render_Waterfall): Minor updates and refactoring.

2018-09-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Teach `FT_String_Draw' to recycle glyphs.

	* src/ftcommon.h (FTDemo_String_Context): New fields for offset glyph
	and extent to fill.
	(FTDemo_String_Draw): Return the number of glyphs drawn.
	* src/ftcommon.c (FTDemo_String_Draw): Implement glyph recycling until 
	the extent is full.

2018-09-12  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Load glyphs and advances explicitly.

	* src/ftcommon.h (FTDemo_Handle): Remove `string_reload' flag.
	(TGlyph): Split `delta' into original `lsb_delta' and `rsb_delta'.
	(FTDemo_String_Load): Declare new function.
	* src/ftcommon.c (string_load, string_render_prepare): Merge into...
	(FTDemo_String_Load): ... this function.
	(FTDemo_String_Draw): Devoid of string loading.

	* src/ftstring.c (main, Process_Event,Render_{Waterfall,KernCmp}):
	Call `FTDemo_String_Load' explicitly.

2018-09-11  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Keep all advances together.

	* src/ftcommon.h (TGlyph): New `hadvance' field for kerned advance.
	* src/ftcommon.c (string_load): Initialize it here.
	(string_render_prepare): Modify it here.
	(FTDemo_String_Draw): Use it here.

2018-09-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Draw warning box for zero-width glyphs.

	* src/ftview.c ({X,Y}_TOO_LONG): Reworked the macros.
	(Render_{Stroke,Fancy,All}): Fill the added space with a warning box
	for zero-width glyphs.
	(Render_{Waterfall,Text}): Updated accordingly.

2018-09-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Extra space for zero-width glyphs.
